<resources>
    <string name="app_name">Pictionis</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="create">Create</string>
    <string name="already_register">Already have an account ?</string>
</resources>
