<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:background="@android:color/holo_blue_light">

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_edittext_register"
            android:background="@drawable/rounded_edittext_register_login"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/username"
            android:autofillHints=""/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_edittext_register"
            android:background="@drawable/rounded_edittext_register_login"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:hint="@string/email"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/username_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
            app:layout_constraintEnd_toEndOf="@+id/username_edittext_register"
            android:autofillHints=""/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_edittext_register"
            android:background="@drawable/rounded_edittext_register_login"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:hint="@string/password"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
            android:autofillHints=""/>

    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/register_button_register"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"/>

    <TextView
            android:text="@string/already_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/already_register_textview_register"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/register_button_register"
            app:layout_constraintStart_toStartOf="@+id/register_button_register"
            app:layout_constraintEnd_toEndOf="@+id/register_button_register"/>
</android.support.constraint.ConstraintLayout>