<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@android:color/holo_blue_light">

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_edittext_login"
            android:layout_marginTop="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/white"
            android:hint="@string/email"
            android:autofillHints=""/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_edittext_login"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:autofillHints=""
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext_login"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext_login"
            app:layout_constraintStart_toStartOf="@+id/email_edittext_login"/>

    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/register_button_login"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext_login"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_login"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_login"
            />

    <TextView
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_account_textview_login"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/register_button_login"
            app:layout_constraintStart_toStartOf="@+id/register_button_login"
            app:layout_constraintEnd_toEndOf="@+id/register_button_login"
            />
</android.support.constraint.ConstraintLayout>